src/app.css
body {
    font: 16px "Century Gothic", Futura, sans-serif;
    margin: 0;
}

.container {
    display: flex;
    height: 100vh;
    flex-direction: column;
    align-items: center;
}

.scores {
    display: flex;
}

.score-divider {
    width: 1px;
    background-color: black;
}

.actions {
    margin-top: auto;
    margin-bottom: 25px;
    height: 90px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    width: 100%;
    box-sizing: border-box;
    padding: 5px;
}

.actions .action {
    border-radius: 50%;
    border: none;
    width: 60px;
    height: 60px;
}

.actions button.primary {
    font-size: 1.6em;
    width: 80px;
    height: 80px;
}

